--- a/index.html
+++ b/index.html
@@ -6,71 +6,94 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>Frontend Mentor | Muhammad Malik</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet">
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    body {
+      font-family: 'Barlow Semi Condensed', sans-serif;
+    }
   </style>
+  <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-  Daniel Clifford
-  Verified Graduate
+  <main>
+    <div class="purple">
+      <div class="user-info">
+        <img class="paijo" src="images/image-daniel.jpg" alt="profile picture">
+        <div>
+          Daniel Clifford
+          <div class="verified">Verified Graduate</div>
+        </div>
+      </div>
+      <h1>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
+        in the company I joined. I honestly feel I got every penny’s worth.</h1>
+      <p>
+        “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the  best - and most grueling - time of my life. Since completing the course, I’ve  successfully switched careers, working as a Software Engineer at a VR startup. ”
+      </p>
+    </div>
 
-  I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-  in the company I joined. I honestly feel I got every penny’s worth.
-
-  “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
-  transition and have heard some people who had an amazing experience here. I signed up 
-  for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
-  The next 12 weeks was the best - and most grueling - time of my life. Since completing 
-  the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-
-  Jonathan Walters
-  Verified Graduate
-
-  The team was very supportive and kept me motivated
-
-  “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
+    <div class="gray">
+      <div class="user-info">
+        <img src="images/image-jonathan.jpg" alt="profile picture">
+        <div>
+          Jonathan Walters
+          <div class="verified">Verified Graduate</div>
+        </div>
+      </div>
+      <h1>The team was very supportive and kept me motivated</h1>
+      <p>
+        “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
   for a big company. This was one of the best investments I’ve made in myself. ”
+      </p>
+    </div>
 
-  Jeanette Harmon
-  Verified Graduate
+    <div class="white1">
+      <div class="user-info">
+        <img src="images/image-jeanette.jpg" alt="profile picture">
+        <div>
+          Jeanette Harmon
+          <div class="verified">Verified Graduate</div>
+        </div>
+      </div>
+      <h1>An overall wonderful and rewarding experience</h1>
+      <p>
+        “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”
+      </p>
+    </div>
 
-  An overall wonderful and rewarding experience
+    <div class="blackish-blue">
+      <div class="user-info">
+        <img class="mukidi" src="images/image-patrick.jpg" alt="profile picture">
+        <div>
+          Patrick Abrams
+          <div class="verified">Verified Graduate</div>
+        </div>
+      </div>
+      <h1>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</h1>
+      <p>
+        “ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people.  ”
+      </p>
+    </div>
 
-  “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
-  while doing something I love. ”
+    <div class="white2">
+      <div class="user-info">
+        <img src="images/image-kira.jpg" alt="profile picture">
+        <div>
+          Kira White
+          <div class="verified">Verified Graduate</div>
+        </div>
+      </div>
+      <h1>Such a life-changing experience. Highly recommended!</h1>
+      <p>
+        “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend!  ”
+      </p>
+    </div>
+  </main>
 
-  Patrick Abrams
-  Verified Graduate
 
-  Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-  learning from their experiences was easy.
 
-  “ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
-  gave me the confidence necessary to be able to go out in the world and present myself as a capable 
-  junior developer. The standard is above the rest. You will get the personal attention you need from 
-  an incredible community of smart and amazing people. ”
 
-  Kira Whittle
-  Verified Graduate
-
-  Such a life-changing experience. Highly recommended!
-
-  “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
-  professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
-  student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
-  did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
-  project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial 
-  could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
-  experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
-  100% recommend! ”
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
